SUBDIRS = src

images = \
	images/alu_engine.png \
	images/cf_engine.png \
	images/tex_engine.png \
	images/engines.odg \
	images/m2s-icon.png \
	images/m2s-icon.xcf \
	images/close.png \
	images/close-sel.png \
	\
	images/back-single.png \
	images/back-double.png \
	images/back-triple.png \
	images/forward-single.png \
	images/forward-double.png \
	images/forward-triple.png \
	images/go.png

pkgdata_imagesdir = $(pkgdatadir)/images
pkgdata_images_DATA = ${images}

EXTRA_DIST = \
	tools/m2s-opencl-kc/debug.c \
	tools/m2s-opencl-kc/debug.h \
	tools/m2s-opencl-kc/elfanalyze.c \
	tools/m2s-opencl-kc/elfanalyze.h \
	tools/m2s-opencl-kc/m2s-opencl-kc.c \
	tools/m2s-opencl-kc/Makefile \
	tools/m2s-opencl-kc/misc.c \
	tools/m2s-opencl-kc/misc.h \
	\
	tools/m2s-opengl-kc/misc.c \
	tools/m2s-opengl-kc/misc.h \
	tools/m2s-opengl-kc/debug.c \
	tools/m2s-opengl-kc/debug.h \
	tools/m2s-opengl-kc/m2s-opengl-kc.c \
	tools/m2s-opengl-kc/Makefile \
	\
	tools/libm2s-glut/glut.c \
	tools/libm2s-glut/Makefile \
	tools/libm2s-glut/m2s-glut.h \
	tools/libm2s-glut/window.c \
	\
	tools/libm2s-opencl/CL/cl_platform.h \
	tools/libm2s-opencl/CL/cl_ext.h \
	tools/libm2s-opencl/CL/opencl.h \
	tools/libm2s-opencl/CL/cl.h \
	tools/libm2s-opencl/CL/cl_gl.h \
	tools/libm2s-opencl/CL/cl_gl_ext.h \
	tools/libm2s-opencl/command-queue.c \
	tools/libm2s-opencl/context.c \
	tools/libm2s-opencl/device.c \
	tools/libm2s-opencl/event.c \
	tools/libm2s-opencl/kernel.c \
	tools/libm2s-opencl/m2s-opencl.c \
	tools/libm2s-opencl/m2s-opencl.h \
	tools/libm2s-opencl/Makefile \
	tools/libm2s-opencl/mem.c \
	tools/libm2s-opencl/platform.c \
	tools/libm2s-opencl/program.c \
	tools/libm2s-opencl/sampler.c \
	\
	tools/libm2s-opengl/m2s-opengl.h \
	tools/libm2s-opengl/opengl.c \
	tools/libm2s-opengl/Makefile \
	\
	tools/inifile/inifile.py \
	\
	samples/arm/test-sort.c \
	samples/arm/test-args.c \
	samples/arm/test-sort \
	samples/arm/test-args \
	samples/southern-islands/7970/mem-config \
	samples/southern-islands/7970/si-config \
	samples/southern-islands/7850/mem-config \
	samples/southern-islands/7850/si-config \
	samples/southern-islands/7770/mem-config \
	samples/southern-islands/7770/si-config \
	samples/southern-islands/7870/mem-config \
	samples/southern-islands/7870/si-config \
	samples/memory/example-1/mem-config \
	samples/memory/example-1/x86-config \
	samples/memory/example-1/README \
	samples/memory/example-5/mem-config \
	samples/memory/example-5/si-config \
	samples/memory/example-5/x86-config \
	samples/memory/example-5/README \
	samples/memory/example-2/net-config \
	samples/memory/example-2/mem-config \
	samples/memory/example-2/x86-config \
	samples/memory/example-2/README \
	samples/memory/example-3/net-config \
	samples/memory/example-3/mem-config \
	samples/memory/example-3/x86-config \
	samples/memory/example-3/README \
	samples/memory/example-4/mem-config \
	samples/memory/example-4/x86-config \
	samples/memory/example-4/evg-config \
	samples/memory/example-4/README \
	samples/x86/test-threads \
	samples/x86/ctx-config-args-sort \
	samples/x86/test-sort.c \
	samples/x86/test-args.c \
	samples/x86/test-sort \
	samples/x86/x86-config-args-sort \
	samples/x86/test-args \
	samples/x86/test-threads.c \
	\
	${images}

