SUBDIRS = \
	runtime \
	src \
	tools

images = \
	images/alu_engine.png \
	images/cf_engine.png \
	images/tex_engine.png \
	images/engines.odg \
	images/m2s-icon.png \
	images/m2s-icon.xcf \
	images/close.png \
	images/close-sel.png \
	\
	images/back-single.png \
	images/back-double.png \
	images/back-triple.png \
	images/forward-single.png \
	images/forward-double.png \
	images/forward-triple.png \
	images/go.png

pkgdata_imagesdir = $(pkgdatadir)/images
pkgdata_images_DATA = ${images}

EXTRA_DIST = \
	\
	samples/arm/test-sort.c \
	samples/arm/test-args.c \
	samples/arm/test-sort \
	samples/arm/test-args \
	samples/fermi/vectorAdd/vectorAdd \
	samples/fermi/vectorAdd/vectorAdd.cubin \
	samples/mips/test-sort.c \
	samples/mips/test-args.c \
	samples/mips/test-sort \
	samples/mips/test-args \
	samples/southern-islands/7970/mem-config \
	samples/southern-islands/7970/mem-config-unified-L1s \
	samples/southern-islands/7970/si-config \
	samples/southern-islands/7850/mem-config \
	samples/southern-islands/7850/si-config \
	samples/southern-islands/7770/mem-config \
	samples/southern-islands/7770/si-config \
	samples/southern-islands/7870/mem-config \
	samples/southern-islands/7870/si-config \
	samples/memory/example-1/mem-config \
	samples/memory/example-1/x86-config \
	samples/memory/example-1/README \
	samples/memory/example-5/mem-config \
	samples/memory/example-5/si-config \
	samples/memory/example-5/x86-config \
	samples/memory/example-5/README \
	samples/memory/example-2/net-config \
	samples/memory/example-2/mem-config \
	samples/memory/example-2/x86-config \
	samples/memory/example-2/README \
	samples/memory/example-3/net-config \
	samples/memory/example-3/mem-config \
	samples/memory/example-3/x86-config \
	samples/memory/example-3/README \
	samples/memory/example-4/mem-config \
	samples/memory/example-4/x86-config \
	samples/memory/example-4/evg-config \
	samples/memory/example-4/README \
	samples/network/mesh_9_wo_r.txt \
	samples/network/mesh_9_route.txt \
	samples/x86/test-threads \
	samples/x86/ctx-config-args-sort \
	samples/x86/test-sort.c \
	samples/x86/test-args.c \
	samples/x86/test-sort \
	samples/x86/x86-config-args-sort \
	samples/x86/test-args \
	samples/x86/test-threads.c \
	\
	${images}

ACLOCAL_AMFLAGS = -I m4

