SUBDIRS = \
	runtime \
	src \
	tests

images = \
	images/alu_engine.png \
	images/cf_engine.png \
	images/tex_engine.png \
	images/engines.odg \
	images/m2s-icon.png \
	images/m2s-icon.xcf \
	images/close.png \
	images/close-sel.png \
	\
	images/back-single.png \
	images/back-double.png \
	images/back-triple.png \
	images/forward-single.png \
	images/forward-double.png \
	images/forward-triple.png \
	images/go.png

pkgdata_imagesdir = $(pkgdatadir)/images
pkgdata_images_DATA = ${images}

EXTRA_DIST = \
	\
	samples/arm/test-sort.c \
	samples/arm/test-args.c \
	samples/arm/test-sort \
	samples/arm/test-args \
	samples/mips/test-sort.c \
	samples/mips/test-args.c \
	samples/mips/test-sort \
	samples/mips/test-args \
	samples/kepler/vectorAdd/vector_add.cu \
	samples/kepler/vectorAdd/vector_add.cubin \
	samples/southern-islands/7970/mem-config \
	samples/southern-islands/7970/mem-config-unified-L1s \
	samples/southern-islands/7970/si-config \
	samples/southern-islands/7850/mem-config \
	samples/southern-islands/7850/si-config \
	samples/southern-islands/7770/mem-config \
	samples/southern-islands/7770/si-config \
	samples/southern-islands/7870/mem-config \
	samples/southern-islands/7870/si-config \
	samples/memory/example-1/mem-config \
	samples/memory/example-1/x86-config \
	samples/memory/example-1/README \
	samples/memory/example-2/net-config \
	samples/memory/example-2/mem-config \
	samples/memory/example-2/x86-config \
	samples/memory/example-2/README \
	samples/memory/example-3/net-config \
	samples/memory/example-3/mem-config \
	samples/memory/example-3/x86-config \
	samples/memory/example-3/README \
	samples/memory/example-4/mem-config \
	samples/memory/example-4/x86-config \
	samples/memory/example-4/evg-config \
	samples/memory/example-4/README \
	samples/memory/example-5/mem-config \
	samples/memory/example-5/si-config \
	samples/memory/example-5/x86-config \
	samples/memory/example-5/README \
	samples/network/graphplot \
	samples/network/example-1/README \
	samples/network/example-1/net-si \
	samples/network/example-2/README \
	samples/network/example-2/ctx-config \
	samples/network/example-2/mem-si \
	samples/network/example-2/net-si \
	samples/network/example-2/si-config \
	samples/network/example-3/README \
	samples/network/example-3/net-bus \
	samples/network/example-4/README \
	samples/network/example-4/net-mesh \
	samples/network/example-5/README \
	samples/network/example-5/net-config.ini \
	samples/network/example-6/README \
	samples/network/example-6/net-mesh-routing \
	samples/network/example-7/README \
	samples/network/example-7/net-torus \
	samples/network/example-8/README \
	samples/network/example-8/ctx-config \
	samples/network/example-8/si-config \
	samples/network/example-8/mem-si \
	samples/network/example-8/net-mesh-si \
	samples/network/example-9/README \
	samples/network/example-9/ctx-config \
	samples/network/example-9/mem-si-32 \
	samples/network/example-9/net-si-32 \
	samples/network/example-9/si-config-32 \
	samples/network/example-10/README \
	samples/network/example-10/ctx-config \
	samples/network/example-10/mem-si-44 \
	samples/network/example-10/net-si-44 \
	samples/network/example-10/si-config-44 \
	samples/network/example-11/README \
	samples/network/example-11/ctx-config \
	samples/network/example-11/mem-x86-40 \
	samples/network/example-11/net-x86-40 \
	samples/network/example-11/x86-config-40 \
	samples/network/example-12/README \
	samples/network/example-12/net-cycle.ini \
	samples/network/example-13/README \
	samples/network/example-13/net-config \
	samples/network/example-14/README \
	samples/network/example-14/net-config.ini \
	samples/x86/example-1/README \
	samples/x86/example-1/test-args.c \
	samples/x86/example-1/test-args \
	samples/x86/example-1/ctx-config.ini \
	samples/x86/example-1/x86-config.ini \
	samples/x86/example-2/README \
	samples/x86/example-2/test-sort.c \
	samples/x86/example-2/test-sort \
	samples/x86/example-2/ctx-config.ini \
	samples/x86/example-2/x86-config.ini \
	samples/x86/example-3/README \
	samples/x86/example-3/test-sort.c \
	samples/x86/example-3/test-sort \
	samples/x86/example-3/test-args.c \
	samples/x86/example-3/test-args \
	samples/x86/example-3/ctx-config.ini \
	samples/x86/example-3/x86-config.ini \
	samples/x86/example-4/README \
	samples/x86/example-4/test-threads.c \
	samples/x86/example-4/test-threads \
	samples/x86/example-4/ctx-config.ini \
	samples/x86/example-4/x86-config.ini \
	\
	${images}

ACLOCAL_AMFLAGS = -I m4

